@@ -6,7 +6,8 @@
  * Faster streaming (CASSANDRA-9766)
  * Add prepared query parameter to trace for "Execute CQL3 prepared query" session (CASSANDRA-11425)
  * Add repaired percentage metric (CASSANDRA-11503)
-
+Merged from 2.1:
+ * Set default streaming_socket_timeout_in_ms to 24 hours (CASSANDRA-11840)
 
 3.7
  * Don't use static dataDirectories field in Directories instances (CASSANDRA-11647)
